@@ -1,0 +1,3 @@
+$$Id$
+#Tags: path, dir, size, date
+autodelete=${color}2${bold}AUTODELETE${coloroff}: wiped ${bold}${path}${bold} which was wasting ${bold}${size}${bold}
