@@ -1,6 +1,8 @@
 2005/02/25 Jamal James <teflon114@gmail.com>
 * Applied diff for more zipscript options. Thx TDSoul
   See http://www.drftpd.org/phpBB2/viewtopic.php?t=170
+* Added AutoFreeSpace plugin. Thx P
+  See http://www.drftpd.org/phpBB2/viewtopic.php?t=57
 
 2005/02/23 Jamal James <teflon114@gmail.com>
 * Fixed OnConnect
